--- a/app/src/main/res/layout/act_main_frag.xml
+++ b/app/src/main/res/layout/act_main_frag.xml
@@ -5,8 +5,8 @@
 	android:layout_height="match_parent"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	android:paddingBottom="2dp"
-	android:paddingLeft="4dp"
-	android:paddingRight="2dp"
+	android:paddingLeft="4dp" android:paddingStart="4dp"
+	android:paddingRight="2dp" android:paddingEnd="2dp"
 	android:paddingTop="2dp"
 	tools:context=".ActMain">
 
