--- a/app/src/main/res/menu/menu_lugar.xml
+++ b/app/src/main/res/menu/menu_lugar.xml
@@ -5,15 +5,22 @@
 	xmlns:tools="http://schemas.android.com/tools"
 	tools:context=".ActLugar">
 	<item
-		android:id="@+id/menu_eliminar"
+		android:id="@+id/menu_img"
 		android:orderInCategory="100"
+		android:title="@string/imagen"
+		android:icon="@android:drawable/ic_menu_report_image"
+		app:showAsAction="always">
+	</item>
+	<item
+		android:id="@+id/menu_eliminar"
+		android:orderInCategory="200"
 		android:title="@string/eliminar"
 		android:icon="@android:drawable/ic_menu_delete"
-		app:showAsAction="ifRoom">
+		app:showAsAction="always">
 	</item>
 	<item
 		android:id="@+id/menu_guardar"
-		android:orderInCategory="200"
+		android:orderInCategory="300"
 		android:title="@string/guardar"
 		android:icon="@android:drawable/ic_menu_save"
 		app:showAsAction="always">
