--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
 	<color name="colorAccent">#008000</color>
 
 	<color name="colorItem">#ff669900</color>
+
+	<color name="black_overlay">#66000000</color>
 </resources>
