--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,8 +16,8 @@
 	<style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar"/>
 
 	<style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light"/>
-	
-	
+
+
 	<style name="btnStyle" parent="@android:style/Widget.Button">
 		<item name="android:textSize">15sp</item>
 		<item name="android:textStyle">bold</item>
@@ -29,6 +29,18 @@
 		<item name="android:shadowRadius">0.6</item>
 		<item name="android:background">@drawable/btn_style</item>
 		<item name="android:padding">10dip</item>
+	</style>
+
+	<style name="FullscreenTheme" parent="AppTheme">
+		<item name="android:actionBarStyle">@style/FullscreenActionBarStyle</item>
+		<item name="android:windowActionBarOverlay">true</item>
+		<item name="android:windowBackground">@null</item>
+		<item name="metaButtonBarStyle">?android:attr/buttonBarStyle</item>
+		<item name="metaButtonBarButtonStyle">?android:attr/buttonBarButtonStyle</item>
+	</style>
+
+	<style name="FullscreenActionBarStyle" parent="Widget.AppCompat.ActionBar">
+		<item name="android:background">@color/black_overlay</item>
 	</style>
 
 </resources>
