--- a/app/src/main/res/layout/act_buscar_cont.xml
+++ b/app/src/main/res/layout/act_buscar_cont.xml
@@ -28,6 +28,7 @@
 		android:layout_height="wrap_content"
 		android:orientation="horizontal"
 		android:layout_centerHorizontal="true"
+		android:layout_alignParentTop="true"
 		android:layout_marginTop="5dp"
 		android:layout_marginBottom="5dp">
 		<TextView
@@ -61,8 +62,7 @@
 			android:inputType="textPersonName"
 			android:ems="10"
 			android:hint="@string/nombre"
-			android:maxLines="1"
-			android:singleLine="true"/>
+			android:maxLines="1"/>
 	</android.support.design.widget.TextInputLayout>
 
 	<LinearLayout
